cluster/homelab/apps/paperless-ngx/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: paperless-ngx
    namespace: paperless-ngx
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:25VhZg==,iv:91Bv4sJDfiLeNhBBNjts8mFqO9pORCbMg/03FIbKNQM=,tag:a3EhN4sxiEZqFyBwV5DHaA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:+JdmMXHadA8SNZlBnSG9u6l0FKexoHvKAbD3CLnFbZPiXIMKpjkaPYrv89Lz9lQN+pv3o4FkUDmN8DXysJzZndU8pQ==,iv:rwpzxrSxvMBVPjgXGuqqkcFNL3nGpj+rUGtH3EGyjYA=,tag:GhDwnz1QT+4qVFW6Yn/xSQ==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:cATVeOniOviNiEC4Jww6gYmNF611XFTy/Q==,iv:rpK8Vs0lbzPWj+hnz5Uv3zN74yfCW1LfwTQJh4iL1Xw=,tag:wr195CoUt5DlXdGY6hF1WQ==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:md0FkfkDO8bIDlTjMA==,iv:AtqGrN0GRaD5vvkeaqRhIy8dM3uLmxZ+pBGwYx5D/dc=,tag:rkWFJ6YrX6g90lgl8CG7uA==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:6BQrWgD4nuW3Smu8EA==,iv:91669ngk3ukyCaagUYCw/4mOlskOcXF1AFHDPS9OL28=,tag:ghDo99yrISDn+MShezV2SQ==,type:str]
        gethomepage.dev/namespace: ENC[AES256_GCM,data:dNCg1EnTBZ89OM5asQ==,iv:uklFpovocY1HC7P88SPyyM6HXYmBIv7FR2my5sjh+Dc=,tag:ydzNFriVrpgHYx3vx4FVig==,type:str]
        gethomepage.dev/app: ENC[AES256_GCM,data:JXo7oh76baFQ8qdOMg==,iv:h0J5LU4LeG9Zm6ODv/ZqVe2l0ttOK6ZQu42/uZSoM9Y=,tag:IievmRdPbLdQSqRPhqRswg==,type:str]
        gethomepage.dev/href: ENC[AES256_GCM,data:7Cxra3vriKp8Ud9R7agzYuNG5KafmPLN0TDpyuyalsXNZ+8=,iv:o7CjWiTifCzwYbg4GCxftYWD0+ANWOetaRjTv63BXeo=,tag:PKIKNZDKI4+hGKh0Qd8Ppw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1umudqfh963mmhgkgatylwh9jgez7qh4twpaqy3ea3nlcarhm09hq5er32r
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZGR2eW5xWjJqUWg5aXN0
[...]
            p9xrjiTjXUFC+pzE5YFsXgeOslTFnieufL5sZztaKssKFyMduH0t+Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-10T09:09:40Z"
    mac: ENC[AES256_GCM,data:7uAs1B6FpZieH+dOqvOMPgMtWI/BIBOE7qFPyzqCPHfPxn/JwHa9lb2uxV0SvAXgireJTRYCBUICvQCT24c5VYS9QIjPJyawQVyKFtdk7f7ktcXKHLWNM8m9MWqqjD4q+uB6PZxMXGb4yBItAKjEWQMvJRQT3pC5IgJQ7y6Ur8w=,iv:FmdIKIYzjkx1HoSZ4V+9lonorJaOWfl3x46SS/L4dlY=,tag:nQRYUYkmK2K8pLl/tTepIw==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.9.1
